<resources>
    <string name="app_name">Hush</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_map_add">Map</string>
    <string name="button_add">Add</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="button_save">Save</string>
    <string name="button_send">Send Location</string>
    <string name="bartext_ring">Ringtone</string>
    <string name="bartext_medi">Media</string>
    <string name="address_title">Address</string>
    <string name="radius_title">Radius</string>
    <string name="location_name_hint">Location name.</string>
    <string name="location_add_hint">Tap here to set a location.</string>
    <string name="location_edit_hint">Tap here to edit your location.</string>
</resources>
