<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:layout_marginBottom="2dp"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/locTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/location_name_hint"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/locAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/address_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/locRad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/radius_title"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="3" />

            <Button
                android:id="@+id/editBtn"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_edit" />

            <Button
                android:id="@+id/delBtn"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_delete" />

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>