<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <EditText
            android:id="@+id/locationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:ems="10"
            android:hint="@string/location_name_hint"
            android:inputType="textPersonName"
            android:paddingLeft="2dp"
            android:paddingRight="2dp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:onClick="setAddress"
            android:hint="@string/location_add_hint"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ringText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/bartext_ring"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/ringVol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/mediText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:paddingLeft="2dp"
            android:paddingRight="2dp"
            android:text="@string/bartext_medi"
            android:textSize="18sp" />

        <SeekBar
            android:id="@+id/mediVol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="5" />

        <Button
            android:id="@+id/saveLoc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/button_save"
            android:onClick="saveLoc"/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>